ios/chrome/browser/ui/omnibox/omnibox_util.cc
@@ -30,6 +30,7 @@ int GetIconForAutocompleteMatchType(AutocompleteMatchType::Type type,
     case AutocompleteMatchType::SEARCH_HISTORY:
       return is_incognito ? IDR_IOS_OMNIBOX_HISTORY_INCOGNITO
                           : IDR_IOS_OMNIBOX_HISTORY;
+    case AutocompleteMatchType::CALCULATOR:
     case AutocompleteMatchType::CONTACT_DEPRECATED:
     case AutocompleteMatchType::SEARCH_OTHER_ENGINE:
     case AutocompleteMatchType::SEARCH_SUGGEST:
@@ -41,7 +42,6 @@ int GetIconForAutocompleteMatchType(AutocompleteMatchType::Type type,
     case AutocompleteMatchType::VOICE_SUGGEST:
       return is_incognito ? IDR_IOS_OMNIBOX_SEARCH_INCOGNITO
                           : IDR_IOS_OMNIBOX_SEARCH;
-    case AutocompleteMatchType::CALCULATOR:
     case AutocompleteMatchType::EXTENSION_APP:
     case AutocompleteMatchType::NUM_TYPES:
       NOTREACHED();
